--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
         <div class="heading-container">
             <h1>Hi, I'm Brent Owen a Full-Stack Developer</h1>
             <p class="mt-4"> -->
-                <!-- I've always had a fondness for solving problems and overcoming challenges. 
+    <!-- I've always had a fondness for solving problems and overcoming challenges. 
                 I enjoy working within a team and working together to acheive our goals. 
                 Communication, flexability and attention to detail are top priority. -->
-                <!-- I'm a freelance developer located in Chattanooga, Tn and a full time sales
+    <!-- I'm a freelance developer located in Chattanooga, Tn and a full time sales
                 representative for the largest DME in the country.
             </p>
             <button class="call-to-action px-5 py-3 mt-4" routerLink="/contact">
@@ -26,9 +26,9 @@
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col">
-                    <h1 class="text-light">Hi, I'm Brent Owen a Software Developer</h1>
+                    <h1 class="text-light">Hi, I'm Brent Owen</h1>
                     <p class="text-light mb-0">
-                        I'm a freelance developer located in Chattanooga, TN.
+                        a freelance Web Developer located in Chattanooga, TN.
                     </p>
                     <div class="row social-links mb-3">
                         <a href="https://www.github.com/bowen227" target="_blank">
@@ -38,7 +38,7 @@
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="https://www.facebook.com/Brent.e.owen" target="_blank">
-                           <i class="fab fa-facebook-square"></i>
+                            <i class="fab fa-facebook-square"></i>
                         </a>
                         <a href="https://www.twitter.com/brenteowen1" target="_blank">
                             <i class="fab fa-twitter-square"></i>
@@ -47,16 +47,18 @@
                     <button class="btn btn-outline-light" routerLink="/contact">Let's Make Something</button>
                 </div>
                 <div class="col-md-6 d-flex align-items-center justify-content-center">
-                    <img src="../../assets/family.jpg" class="hero-img" alt="Image of Brent Owen, his wife and two kids">
+                    <img src="../../assets/family.jpg" class="hero-img"
+                        alt="Image of Brent Owen, his wife and two kids">
                 </div>
             </div>
         </div>
         <div class="p-5"></div>
         <div class="p-5"></div>
         <div class="pt-md-5"></div>
-
     </section>
+
     <div class="clipped-container bg-dark"></div>
+
     <section class="about-container mb-5">
         <div class="container pt-5">
             <div class="row">
@@ -64,7 +66,7 @@
                     <div class="p-4 shadow">
                         <h3><i class="fas fa-user mr-2"></i>About Me</h3>
                         <div class="container">
-                            <p>
+                            <p class="pt-4">
                                 I love programming, traveling, lifting weights and hanging with my wife and kids.
                                 While I have spent most my life working in the DME field, since 2002, I've always
                                 had a passion for programming and spend most my free time developing and learning new
@@ -77,9 +79,19 @@
                 </div>
                 <div class="col-lg-6 my-2">
                     <div class="p-4 shadow ">
-                        <h3><i class="fas fa-leaf mr-2"></i>Hobbies</h3>
+                        <h3><i class="fas fa-leaf mr-2"></i>Skills</h3>
                         <div class="container d-flex flex-row justify-content-center flex-wrap">
-                            <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                            <!-- <i class="skill hidden fab fa-html5"></i> -->
+                            <!-- <i class="skill hidden fab fa-css3-alt"></i> -->
+                            <i class="skill hidden fab fa-sass"></i>
+                            <!-- <i class="skill hidden fab fa-bootstrap"></i> -->
+                            <i class="skill hidden fab fa-js"></i>
+                            <i class="skill hidden fab fa-angular"></i>
+                            <i class="skill hidden fab fa-react"></i>
+                            <i class="skill hidden fab fa-node-js"></i>
+                            <i class="skill hidden fab fa-git"></i>
+                            <!-- <i class="skill hidden fas fa-database"></i> -->
+                            <!-- <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
                                 <i class="fas fa-laptop-code mt-3"></i>
                                 <p>Coding</p>
                             </div>
@@ -102,7 +114,7 @@
                             <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
                                 <i class="fas fa-headset mt-3"></i>
                                 <p>Gaming</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -113,10 +125,34 @@
     <div class="p-md-5"></div>
     <div class="pt-md-5"></div>
 
-    <section class="skills-container">
+    <!-- <section class="skills-container">
         <div class="container skills pt-5">
-            <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Skills</h3>
+            <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Hobbies</h3>
             <div class="row p-3 justify-content-center">
+                <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-laptop-code mt-3"></i>
+                    <p>Coding</p>
+                </div>
+                <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-dumbbell mt-3"></i>
+                    <p>Lifting</p>
+                </div>
+                <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-plane mt-3"></i>
+                    <p>Traveling</p>
+                </div>
+                <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-music mt-3"></i>
+                    <p>Music</p>
+                </div>
+                <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-truck-monster mt-3"></i>
+                    <p>Off Road</p>
+                </div>
+                <div class="hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-headset mt-3"></i>
+                    <p>Gaming</p>
+                </div>
                 <i class="skill hidden fab fa-html5"></i>
                 <i class="skill hidden fab fa-css3-alt"></i>
                 <i class="skill hidden fab fa-sass"></i>
@@ -129,7 +165,7 @@
                 <i class="skill hidden fas fa-database"></i>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <div class="p-5"></div>
     <div class="pt-md-5"></div>
@@ -146,10 +182,12 @@
                     <div class="flex-grow-1">
                         <div class="row">
                             <h5 class="card-title col-10">Profile Site</h5>
-                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
+                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet"
+                                target="__blank">Code</a>
                         </div>
                         <p class="card-text">
-                            Personal profile site built with Angular on the front and .Net Core on the back. Firebase for the Auth.
+                            Personal profile site built with Angular on the front and .Net Core on the back. Firebase
+                            for the Auth.
                         </p>
                     </div>
                     <small>Angular, TypeScript, BootStrap, .Net Core API, Firebase</small>
@@ -163,8 +201,10 @@
                     <div class="flex-grow-1">
                         <div class="row">
                             <h5 class="card-title col-8">Profile Site Backend</h5>
-                            <a class="px-2 col" href="https://exerciselist.azurewebsites.net/swagger/index.html" target="__blank">Live</a>
-                            <a class="px-2 code" href="https://github.com/bowen227/profileBackEnd" target="__blank">Code</a>
+                            <a class="px-2 col" href="https://exerciselist.azurewebsites.net/swagger/index.html"
+                                target="__blank">Live</a>
+                            <a class="px-2 code" href="https://github.com/bowen227/profileBackEnd"
+                                target="__blank">Code</a>
                         </div>
                         <p class="card-text">
                             Personal profile site backend. CRUD for all the small webs apps on the site.
@@ -184,7 +224,8 @@
                             <a class="px-2 col" href="https://github.com/bowen227/ppi" target="__blank">Code</a>
                         </div>
                         <p class="card-text">
-                            A web app developed to help coaches and associations evaluate players to create balanced teams.
+                            A web app developed to help coaches and associations evaluate players to create balanced
+                            teams.
                         </p>
                     </div>
                     <small>JS, HTML, CSS, BootStrap</small>
@@ -199,10 +240,12 @@
                         <div class="row">
                             <h5 class="card-title col-8">Blog</h5>
                             <a class="px-2 col" routerLink="/blogs">Live</a>
-                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
+                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet"
+                                target="__blank">Code</a>
                         </div>
                         <p class="card-text">
-                            Create, edit and delete blogs. Like and comment on other peoples blogs. Anyone can post new blog just sign in.
+                            Create, edit and delete blogs. Like and comment on other peoples blogs. Anyone can post new
+                            blog just sign in.
                         </p>
                     </div>
                     <small>Angular, TypeScript, BootStrap, Firestore</small>
@@ -217,7 +260,8 @@
                         <div class="row">
                             <h5 class="card-title col-8">COVID Dashboard</h5>
                             <a class="px-2 col" routerLink="/covid">Live</a>
-                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet" target="__blank">Code</a>
+                            <a class="px-2 col" href="https://github.com/bowen227/NewBrentOwenNet"
+                                target="__blank">Code</a>
                         </div>
                         <p class="card-text">
                             Connecting to API to display world and local COVID data.
@@ -347,6 +391,47 @@
     <div class="p-5"></div>
     <div class="pt-md-5"></div>
     <div class="pt-md-5"></div>
+    <!-- <section class="skills-container">
+        <div class="container skills pt-5">
+            <h3><i id="skill-heading" class="fas fa-chart-line mr-2"></i>Hobbies</h3>
+            <div class="row p-3 justify-content-center">
+                <div class="card shadow hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-laptop-code mt-3"></i>
+                    <p>Coding</p>
+                </div>
+                <div class="card shadow hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-dumbbell mt-3"></i>
+                    <p>Lifting</p>
+                </div>
+                <div class="card shadow hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-plane mt-3"></i>
+                    <p>Traveling</p>
+                </div>
+                <div class="card shadow hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-music mt-3"></i>
+                    <p>Music</p>
+                </div>
+                <div class="card shadow hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-truck-monster mt-3"></i>
+                    <p>Off Road</p>
+                </div>
+                <div class="card shadow hobby d-flex flex-column justify-content-center align-items-center m-2">
+                    <i class="fas fa-headset mt-3"></i>
+                    <p>Gaming</p>
+                </div>
+                <i class="skill hidden fab fa-html5"></i>
+                        <i class="skill hidden fab fa-css3-alt"></i>
+                        <i class="skill hidden fab fa-sass"></i>
+                        <i class="skill hidden fab fa-bootstrap"></i>
+                        <i class="skill hidden fab fa-js"></i>
+                        <i class="skill hidden fab fa-angular"></i>
+                        <i class="skill hidden fab fa-react"></i>
+                        <i class="skill hidden fab fa-node-js"></i>
+                        <i class="skill hidden fab fa-git"></i>
+                        <i class="skill hidden fas fa-database"></i>
+            </div>
+        </div>
+    </section> -->
     <!-- <section class="what-to-expect d-flex flex-column justify-content-center align-items-center mb-5">
         <div class="what-heading-container">
             <h3 class="mt-5"><i class="fas fa-chalkboard mr-2"></i>What To Expect</h3>
