Added lazy loading to images

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -176,7 +176,8 @@
         <div class="row justify-content-center">
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/profileSite-1.png" alt="brentowen.net screenshot" class="card-img-top">
+                    <img src="../../assets/profileSite-1.png" alt="brentowen.net screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -195,7 +196,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/api-1.jpg" alt="Web api screenshot" class="card-img-top">
+                    <img src="../../assets/api-1.jpg" alt="Web api screenshot" class="card-img-top" loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -215,7 +216,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/ppi-1.jpg" alt="Player Power Index screenshot" class="card-img-top">
+                    <img src="../../assets/ppi-1.jpg" alt="Player Power Index screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -233,7 +235,7 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/blog-1.jpg" alt="Blog screenshot" class="card-img-top">
+                    <img src="../../assets/blog-1.jpg" alt="Blog screenshot" class="card-img-top" loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -253,7 +255,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/covid-1.jpg" alt="Covid dashboard screen shot" class="card-img-top">
+                    <img src="../../assets/covid-1.jpg" alt="Covid dashboard screen shot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -272,7 +275,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/js-apps.jpg" alt="Javascript apps screenshot" class="card-img-top">
+                    <img src="../../assets/js-apps.jpg" alt="Javascript apps screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -289,7 +293,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/deco-2.jpg" alt="Deco project screenshot" class="card-img-top">
+                    <img src="../../assets/deco-2.jpg" alt="Deco project screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -303,7 +308,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/deco-1.jpg" alt="Deco project screenshot" class="card-img-top">
+                    <img src="../../assets/deco-1.jpg" alt="Deco project screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -317,7 +323,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/holden-1.jpg" alt="Holden project screenshot" class="card-img-top">
+                    <img src="../../assets/holden-1.jpg" alt="Holden project screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -331,7 +338,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/holden-2.jpg" alt="Holden project screenshot" class="card-img-top">
+                    <img src="../../assets/holden-2.jpg" alt="Holden project screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -345,7 +353,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/how-it-works-1.jpg" alt="Deco project screenshot" class="card-img-top">
+                    <img src="../../assets/how-it-works-1.jpg" alt="Deco project screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -359,7 +368,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/porrada-1.jpg" alt="Porrada project screenshot" class="card-img-top">
+                    <img src="../../assets/porrada-1.jpg" alt="Porrada project screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
@@ -373,7 +383,8 @@
             </div>
             <div class="card shadow-sm">
                 <div class="img-container">
-                    <img src="../../assets/nucamp-1.jpg" alt="Nucamp website screenshot" class="card-img-top">
+                    <img src="../../assets/nucamp-1.jpg" alt="Nucamp website screenshot" class="card-img-top"
+                        loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column">
                     <div class="flex-grow-1">
